results/52da874c90321be951d2f82a893fda91/err_code.txt
  File "./pyfile.py", line 18
    runitem = MCMCWrapper(emcee, m,c, x, , sigma_gauss, [object Object], 1000, 1000, 100, 2, {errval}, fanatapan@yahoo.co.uk, 52da874c90321be951d2f82a893fda91, {modelStrings},   argslist = (x, 0.65, data)
                                         ^
SyntaxError: invalid syntax
